--- a/notebooks/example_train_procedure.ipynb
+++ b/notebooks/example_train_procedure.ipynb
@@ -2,24 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-01-24 11:31:04.598461: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-01-24 11:31:07.322476: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-01-24 11:31:08.598749: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /opt/bwhpc/common/devel/cuda/11.8/lib64\n",
-      "2023-01-24 11:31:08.598821: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /opt/bwhpc/common/devel/cuda/11.8/lib64\n",
-      "2023-01-24 11:31:08.598828: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import json\n",
@@ -32,15 +19,16 @@
     "from tqdm.keras import TqdmCallback\n",
     "sys.path.append(\"../\")\n",
     "from src.Evaluation import plot_model_history\n",
+    "from sktime.datasets import load_from_tsfile_to_dataframe\n",
     "from src.ModelBuilder import get_MLP, get_MCDCNN, get_Time_CNN, get_FCN, get_Encoder, get_Resnet\n",
-    "from src.LoadData import get_all_datasets_test_train_np_arrays\n",
+    "from src.LoadData import get_all_datasets_test_train_np_arrays, get_all_datasets_info, load_numpy_array_from_ts\n",
     "from src.Helpers import append_to_csv\n",
     "from src.Helpers import append_to_csv, get_confusion_matrix_for_model_and_data, visualize_confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -49,12 +37,12 @@
    },
    "outputs": [],
    "source": [
-    "path_to_datasets = \"../datasets\""
+    "path_to_datasets = \"./../datasets\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -68,14 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "datasets_test_train_data = {k:v for k,v in datasets_test_train_data.items() if k=='large_kitchen_appliances' }"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -90,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -105,17 +95,6 @@
       "WARNING:tensorflow:There are non-GPU devices in `tf.distribute.Strategy`, not using nccl allreduce.\n",
       "INFO:tensorflow:Using MirroredStrategy with devices ('/job:localhost/replica:0/task:0/device:CPU:0',)\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-01-24 11:31:35.948908: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /opt/bwhpc/common/devel/cuda/11.8/lib64\n",
-      "2023-01-24 11:31:35.948938: W tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:265] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2023-01-24 11:31:35.948955: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (uc2n368.localdomain): /proc/driver/nvidia/version does not exist\n",
-      "2023-01-24 11:31:36.019995: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
     }
    ],
    "source": [
@@ -127,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -141,7 +120,7 @@
        "[LogicalDevice(name='/device:CPU:0', device_type='CPU')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -172,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -188,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -199,12 +178,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20f09b73f76646b7b1be90c0f8f3300f",
+       "model_id": "542fe1d33b484eaabb4aa3b2e80001f7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/2 [00:00<?, ?dataset/s]"
+       "  0%|          | 0/1 [00:00<?, ?dataset/s]"
       ]
      },
      "metadata": {},
@@ -214,18 +193,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset name:  dodger_loop_day\n"
+      "Dataset name:  large_kitchen_appliances\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef62462be9944d3e8763f0f56573d0b4",
+       "model_id": "4c65cac1bc724da8ba31f55eb3556d27",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Train on \"dodger_loop_day\":   0%|          | 0/1 [00:00<?, ?model/s]"
+       "Train on \"large_kitchen_appliances\":   0%|          | 0/6 [00:00<?, ?model/s]"
       ]
      },
      "metadata": {},
@@ -235,13 +214,128 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Model name:  MLP\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0e37896a04eb4b698bdf8228a4adc4f7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "MLP: 0epoch [00:00, ?epoch/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12/12 [==============================] - 0s 2ms/step - loss: 2.6179 - accuracy: 0.4133\n",
+      "12/12 [==============================] - 0s 2ms/step\n",
+      "Model name:  MCDCNN\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f1b65e7193a34af1b8b1efa31604eb45",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "MCDCNN: 0epoch [00:00, ?epoch/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12/12 [==============================] - 0s 4ms/step - loss: 1.3581 - accuracy: 0.3333\n",
+      "12/12 [==============================] - 0s 3ms/step\n",
+      "Model name:  Time_CNN\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eaf0435868dc4d8a883a14b604e2a6f8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Time_CNN: 0epoch [00:00, ?epoch/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12/12 [==============================] - 0s 3ms/step - loss: 1.1640 - accuracy: 0.3333\n",
+      "12/12 [==============================] - 0s 3ms/step\n",
+      "Model name:  FCN\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b6f56b97468047ed9be416c5937cf518",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FCN: 0epoch [00:00, ?epoch/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12/12 [==============================] - 1s 92ms/step - loss: 0.7556 - accuracy: 0.7013\n",
+      "12/12 [==============================] - 1s 111ms/step\n",
+      "Model name:  Encoder\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a8e4c2a87e0c41efa04be6514998b1db",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Encoder: 0epoch [00:00, ?epoch/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12/12 [==============================] - 4s 341ms/step - loss: 2.6078 - accuracy: 0.4027\n",
+      "12/12 [==============================] - 5s 385ms/step\n",
       "Model name:  Resnet\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cbaa8640c8ba40f9939e409db8239237",
+       "model_id": "06706dbf2da14681b574e83fafcab4bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -256,52 +350,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3/3 [==============================] - 0s 54ms/step - loss: nan - accuracy: 0.1500\n",
-      "3/3 [==============================] - 0s 44ms/step\n",
-      "Dataset name:  arrow_head\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05680559299e40baba0a567391ac081d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Train on \"arrow_head\":   0%|          | 0/1 [00:00<?, ?model/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model name:  Resnet\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "419b4c625faf47d198416b9311a51d27",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Resnet: 0epoch [00:00, ?epoch/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6/6 [==============================] - 0s 49ms/step - loss: 1.1047 - accuracy: 0.2571\n",
-      "6/6 [==============================] - 1s 46ms/step\n"
+      "12/12 [==============================] - 3s 219ms/step - loss: 0.4385 - accuracy: 0.8480\n",
+      "12/12 [==============================] - 3s 234ms/step\n"
      ]
     }
    ],
@@ -338,42 +388,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[286,   0,  14],\n",
-       "       [ 11, 287,   0],\n",
-       "       [158,   0, 144]])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[286,   0,  14],\n",
-       "       [ 11, 287,   0],\n",
-       "       [158,   0, 144]])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
