added docstring to create_confusion_matrix_plot_from_csv

--- a/src/EnsembleEvaluation.ipynb
+++ b/src/EnsembleEvaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "outputs": [
     {
      "name": "stderr",
@@ -26,14 +26,16 @@
       "WARNING:root:The given value for groups will be overwritten.\n",
       "WARNING:root:The given value for groups will be overwritten.\n",
       "WARNING:root:The given value for groups will be overwritten.\n",
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n",
       "WARNING:root:The given value for groups will be overwritten.\n"
      ]
     },
     {
      "data": {
-      "text/plain": "{'Encoder': <keras.engine.functional.Functional at 0x7f916e4a5ed0>,\n 'FCN': <keras.engine.sequential.Sequential at 0x7f916dfa55a0>,\n 'MCDCNN': <keras.engine.sequential.Sequential at 0x7f90ec275630>,\n 'MLP': <keras.engine.sequential.Sequential at 0x7f916dfa4c70>,\n 'Resnet': <keras.engine.functional.Functional at 0x7f90ec38bf40>,\n 'Time_CNN': <keras.engine.sequential.Sequential at 0x7f916e3daad0>}"
+      "text/plain": "{'Encoder': <keras.engine.functional.Functional at 0x7f916e4a7970>,\n 'FCN': <keras.engine.sequential.Sequential at 0x7f912c350970>,\n 'MCDCNN': <keras.engine.sequential.Sequential at 0x7f90ec1ab070>,\n 'MLP': <keras.engine.sequential.Sequential at 0x7f90e4463ee0>,\n 'Resnet': <keras.engine.functional.Functional at 0x7f90e4476ef0>,\n 'Time_CNN': <keras.engine.sequential.Sequential at 0x7f90e44b9ea0>}"
      },
-     "execution_count": 26,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,18 +81,6 @@
    ],
    "metadata": {
     "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
    }
   },
   {
