move notebooks from src, compare adam sgd, add noise notebook

--- a/notebooks/EnsembleEvaluation.ipynb
+++ b/notebooks/EnsembleEvaluation.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -18,6 +21,12 @@
   {
    "cell_type": "code",
    "execution_count": 33,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -33,7 +42,14 @@
     },
     {
      "data": {
-      "text/plain": "{'Encoder': <keras.engine.functional.Functional at 0x7f916e4a7970>,\n 'FCN': <keras.engine.sequential.Sequential at 0x7f912c350970>,\n 'MCDCNN': <keras.engine.sequential.Sequential at 0x7f90ec1ab070>,\n 'MLP': <keras.engine.sequential.Sequential at 0x7f90e4463ee0>,\n 'Resnet': <keras.engine.functional.Functional at 0x7f90e4476ef0>,\n 'Time_CNN': <keras.engine.sequential.Sequential at 0x7f90e44b9ea0>}"
+      "text/plain": [
+       "{'Encoder': <keras.engine.functional.Functional at 0x7f916e4a7970>,\n",
+       " 'FCN': <keras.engine.sequential.Sequential at 0x7f912c350970>,\n",
+       " 'MCDCNN': <keras.engine.sequential.Sequential at 0x7f90ec1ab070>,\n",
+       " 'MLP': <keras.engine.sequential.Sequential at 0x7f90e4463ee0>,\n",
+       " 'Resnet': <keras.engine.functional.Functional at 0x7f90e4476ef0>,\n",
+       " 'Time_CNN': <keras.engine.sequential.Sequential at 0x7f90e44b9ea0>}"
+      ]
      },
      "execution_count": 33,
      "metadata": {},
@@ -46,29 +62,41 @@
     "models = dict(zip(list(map(lambda filename: filename.removesuffix('.h5'), models_to_load)),\n",
     "                  list(map(lambda filename: keras.models.load_model(model_path + \"/\" + filename), models_to_load))))\n",
     "models"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "ensemble_all = Ensemble(models=models.values(), ensemble_type=EnsembleMethods.AVERAGE)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "<tf.Tensor: shape=(15,), dtype=float32, numpy=\narray([0.00543777, 0.40582752, 0.00788332, 0.0244417 , 0.0019312 ,\n       0.1477799 , 0.00152094, 0.02781161, 0.17547236, 0.08840287,\n       0.00077315, 0.08593228, 0.00071864, 0.02149367, 0.00457304],\n      dtype=float32)>"
+      "text/plain": [
+       "<tf.Tensor: shape=(15,), dtype=float32, numpy=\n",
+       "array([0.00543777, 0.40582752, 0.00788332, 0.0244417 , 0.0019312 ,\n",
+       "       0.1477799 , 0.00152094, 0.02781161, 0.17547236, 0.08840287,\n",
+       "       0.00077315, 0.08593228, 0.00071864, 0.02149367, 0.00457304],\n",
+       "      dtype=float32)>"
+      ]
      },
      "execution_count": 30,
      "metadata": {},
@@ -78,40 +106,40 @@
    "source": [
     "ensemble_all(tf.random.normal((1,128)))\n",
     "# TODO: actual evaluation"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "outputs": [],
-   "source": [],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
