--- a/notebooks/tanya/analysis_training_res.ipynb
+++ b/notebooks/tanya/analysis_training_res.ipynb
@@ -32,9 +32,9 @@
     }
    ],
    "source": [
-    "path_training_res = \"./training_res.csv\"\n",
+    "path_training_res = \"./../training_res.csv\"\n",
     "df_training_res = pd.read_csv(path_training_res)\n",
-    "path_analysis_res = \"./datasets_analysis/data_dist.csv\"\n",
+    "path_analysis_res = \"./../datasets_analysis/data_dist.csv\"\n",
     "df_analysis_res = pd.read_csv(path_analysis_res)\n",
     "\n",
     "df_ds = df_analysis_res[[\"ds_name\", \"test_classes_dist\"]]\n",
