--- a/notebooks/tanya/compare_adam_sgd/TrainProcedure_example.ipynb
+++ b/notebooks/tanya/compare_adam_sgd/TrainProcedure_example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -15,50 +15,74 @@
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
     "import tensorflow as tf\n",
     "tf.get_logger().setLevel(logging.WARNING)\n",
-    "\n",
+    "import sys\n",
     "import json\n",
+    "sys.path.append(\"../../../src\")\n",
     "from Helpers import visualize_confusion_matrix, create_confusion_matrix_plot_from_csv\n",
     "from Evaluation import plot_model_history\n",
     "from TrainProdecure import train\n",
-    "from ModelBuilder import get_MLP, get_FCN, get_Resnet, get_MCDCNN, get_Encoder, get_Time_CNN"
+    "from ModelBuilder import get_MLP, get_FCN, get_Resnet, get_MCDCNN, get_Encoder, get_Time_CNN\n",
+    "from LoadData import DATASETS_RESNET, get_all_datasets_test_train_np_arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets_path = \"../../../datasets\"\n",
+    "datasets=get_all_datasets_test_train_np_arrays(datasets_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "epochs = 30\n",
     "tf.keras.utils.set_random_seed(math.floor(time.time()))\n",
     "df_training_res = train([get_MLP, get_FCN, get_Resnet, get_MCDCNN, get_Encoder, get_Time_CNN], epochs=epochs)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "history = df_training_res['history'][0]\n",
     "confusion_matrix = df_training_res['confusion_matrix'][0]\n",
     "plot_model_history(json.loads(history), epochs=epochs)\n",
     "visualize_confusion_matrix(json.loads(confusion_matrix), \"MLP\", \"First Dataset\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -108,51 +132,54 @@
     "\n",
     "\n",
     "create_confusion_matrix_plot_from_csv('../results/train__MLP_FCN_Resnet_MCDCNN_Encoder_Time_CNN_37_datasets.csv', verbose=True)\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ts_ensemble",
    "language": "python",
-   "name": "python3"
+   "name": "ts_ensemble"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
